--- a/public/css/login.css
+++ b/public/css/login.css
@@ -625,3 +625,10 @@ iframe {
 .modal-wrapper {
     z-index: 999; /* keep modal on top of iframe */
 }
+
+hr {
+  width: 100%;
+  border: none;
+  border-top: 1px solid #ccc;
+  margin: 10px 0;
+}
