--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -377,3 +377,10 @@ body {
         margin-top: 10px !important; 
     }
 }
+
+label.error {
+    color: #ff4d4d !important;
+    font-size: 14px;
+    margin-top: 3px;
+    display: block;
+}
