--- a/public/css/login.css
+++ b/public/css/login.css
@@ -633,3 +633,10 @@ hr {
   margin: 10px 0;
   flex: 0 0 auto;
 }
+
+label.error {
+    color: #ff4d4d !important;
+    font-size: 14px;
+    margin-top: 3px;
+    display: block;
+}
