--- a/public/css/home.css
+++ b/public/css/home.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
 }
 
+
 :root {
     /* Light Mode */
     --clr-primary: #000;    
@@ -48,6 +49,11 @@ body {
     min-height: 100vh;
     transition: all 0.3s ease;
     line-height: 1.5;
+}
+
+body.loading * {
+    opacity: 0;
+    pointer-events: none;
 }
 
 /* --- Sidebar --- */
