--- a/public/templates/account_deactivated.html
+++ b/public/templates/account_deactivated.html
@@ -127,7 +127,7 @@
         visibility: hidden;
         width: 0;
       "
-      >TechStore Account Application Update</span
+      >TechStore Account Termination</span
     >
     <table
       border="0"
@@ -234,7 +234,7 @@
                             margin-bottom: 15px;
                           "
                         >
-                          Thank you for your interest in TechStore. After reviewing your details, we regret to inform you that your account application has been <strong>declined</strong> by the administrator.
+                          Thank you for your service in TechStore. After reviewing your details, we regret to inform you that your account has been <strong>deactivated</strong> by the administrator.
                         </p>
                         <p
                           style="
