--- a/public/templates/account_deactivated.html
+++ b/public/templates/account_deactivated.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Account Application Update</title>
+    <title>Account Termination</title>
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -212,7 +212,7 @@
                         "
                       >
                         <h1 style="font-family: 'Oswald', sans-serif; font-size: 24px; font-weight: 800; margin: 0 0 15px 0; color: #000000;">
-                          Account Application Declined
+                          Account Termination
                         </h1>
                         <p
                           style="
